--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "authorizenet/authorizenet": "^2.0",
         "barryvdh/laravel-ide-helper": "^2.10",
         "cinetpay/cinetpay-php": "^1.9",
+        "craftsys/msg91-laravel": "^0.13.1",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^7.3",
         "instamojo/instamojo-php": "^0.4.0",
