--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "predis/predis": "^1.1",
         "razorpay/razorpay": "2.0.0",
         "sebacarrasco93/laravel-payku": "^1.0",
+        "silviolleite/laravelpwa": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/db-dumper": "2.21.1",
         "stripe/stripe-php": "^7.95",
